# rhea

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL.md  LICENSE.md  README.md  Rhea.podspec
debian/: changelog  control  copyright  librhea-dev.install  librhea.install
doc/: LICENSE.md  make.bat
doc/doxygen/: mainpage.md
doc/source/: examples.rst  index.rst
rhea/: CMakeLists.txt  abstract_constraint.hpp  abstract_variable.cpp  abstract_variable.hpp  action_variable.hpp  approx.hpp  constraint.hpp  dummy_variable.hpp  edit_constraint.hpp  edit_or_stay_constraint.hpp  errors.hpp  errors_expl.hpp  expression.hpp  flat_map.hpp  float_variable.hpp  iostream.hpp  linear_constraint.hpp  linear_equation.hpp  linear_expression.cpp  linear_expression.hpp  linear_inequality.hpp  link_variable.hpp  objective_variable.hpp  parser.hpp  relation.hpp  simplex_solver.cpp  simplex_solver.hpp  slack_variable.hpp  solver.hpp  stay_constraint.hpp  stays.hpp  strength.hpp  symbol.cpp  symbol.hpp  symbolic_weight.cpp  symbolic_weight.hpp  tableau.cpp  tableau.hpp  variable.hpp  version.hpp.in
src/: CMakeLists.txt  abstract_constraint.hpp  abstract_variable.cpp  abstract_variable.hpp  approx.hpp  constraint.hpp  dummy_variable.hpp  edit_constraint.hpp  edit_or_stay_constraint.hpp  errors.hpp  float_variable.hpp  iostream.hpp  linear_constraint.hpp  linear_equation.hpp  linear_expression.cpp  linear_expression.hpp  linear_inequality.hpp  objective_variable.hpp  point.hpp  relation.hpp  simplex_solver.cpp  simplex_solver.hpp  slack_variable.hpp  solver.hpp  stay_constraint.hpp  strength.hpp  symbolic_weight.cpp  symbolic_weight.hpp  tableau.cpp  tableau.hpp  variable.hpp  version.hpp.in
unit_tests/: CMakeLists.txt  speed_test.cpp  test_core.cpp  unit_tests.cpp
